add handler Login to swagger
