# cmd/sso/docs/swagger.yaml
@@ -1,7 +1,18 @@
 definitions:
+  v1.Login:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   v1.Response:
     properties:
+      access_token:
+        type: string
       error:
+        type: string
+      refresh_token:
         type: string
       status:
         type: string
@@ -29,6 +40,44 @@ paths:
       summary: Проверка, что приложение живо
       tags:
       - Health
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates a user and returns access and refresh tokens.
+      parameters:
+      - description: Login request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v1.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Login successful
+          schema:
+            $ref: '#/definitions/v1.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/v1.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.Response'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/v1.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/v1.Response'
+      summary: Login
+      tags:
+      - Auth
   /auth/ready:
     get:
       description: Определяет можно ли подавать трафик на сервис
