# internal/handlersapi/v1/sso_handlers_response.go
@@ -26,8 +26,10 @@ type Logout struct {
 }
 
 type Response struct {
-	Status string `json:"status"`
-	Error  string `json:"error,omitempty"`
+	Status       string `json:"status"`
+	Error        string `json:"error,omitempty"`
+	AccessToken  string `json:"access_token,omitempty"`
+	RefreshToken string `json:"refresh_token,omitempty"`
 }
 
 const StatusError = "Error"
@@ -39,9 +41,17 @@ func Error(msg string) Response {
 	}
 }
 
-func HealthOk(msg string) Response {
+func ResponseOk(msg string) Response {
 	return Response{
 		Status: msg,
+	}
+}
+
+func RepsonseOkWithTokens(msg string, accessToken string, refreshToken string) Response {
+	return Response{
+		Status:       msg,
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
 	}
 }
 
@@ -51,30 +61,63 @@ func ValidationError(errs validator.ValidationErrors) string {
 	for _, err := range errs {
 		switch err.ActualTag() {
 		case "required":
-			errMsgs = append(errMsgs, fmt.Sprintf("field %s is a required field", err.Field()))
+			errMsgs = append(
+				errMsgs, fmt.Sprintf("field %s is a required field", err.Field()),
+			)
 		default:
-			errMsgs = append(errMsgs, fmt.Sprintf("field %s is not valid", err.Field()))
+			errMsgs = append(
+				errMsgs, fmt.Sprintf("field %s is not valid", err.Field()),
+			)
 		}
 	}
 
 	return strings.Join(errMsgs, ", ")
 }
 
-func responseOK(w http.ResponseWriter, r *http.Request) {
+func responseOK(
+	w http.ResponseWriter,
+	r *http.Request,
+) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 }
 
-func responseError(w http.ResponseWriter, r *http.Request, statusCode int, message string) {
+func responseError(
+	w http.ResponseWriter,
+	r *http.Request,
+	statusCode int,
+	message string,
+) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
 	dataMarshal, _ := easyjson.Marshal(Error(message))
 	w.Write(dataMarshal)
 }
 
-func responseHealth(w http.ResponseWriter, r *http.Request, statusCode int, message string) {
+func responseHealth(
+	w http.ResponseWriter,
+	r *http.Request,
+	statusCode int,
+	message string,
+) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
-	dataMarshal, _ := json.Marshal(HealthOk(message))
+	dataMarshal, _ := json.Marshal(ResponseOk(message))
+	w.Write(dataMarshal)
+}
+
+func responseAccessRefresh(
+	w http.ResponseWriter,
+	r *http.Request,
+	statusCode int,
+	message string,
+	accessToken string,
+	refreshToken string,
+) {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(statusCode)
+	dataMarshal, _ := json.Marshal(RepsonseOkWithTokens(
+		message, accessToken, refreshToken),
+	)
 	w.Write(dataMarshal)
 }
